--- a/app/azmet-shiny-template.html
+++ b/app/azmet-shiny-template.html
@@ -377,5 +377,7 @@
     <script src="https://azmet.arizona.edu/core/misc/tableheader.js?v=10.0.11"></script>
     <script src="https://azmet.arizona.edu/profiles/custom/az_quickstart/modules/custom/az_paragraphs/js/az_paragraphs_full_width.js?v=10.0.11"></script>
     <script src="https://azmet.arizona.edu/profiles/custom/az_quickstart/themes/custom/az_barrio/js/az-barrio-off-canvas-nav.js?sact2n"></script>
+    <!-- script src="https://code.jquery.com/jquery-3.7.1.js"></script -->
+    <!-- script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script -->
   </body>
 </html>
